force-app/main/default/objects/Policy__c/Policy__c.object-meta.xml
<CustomObject>
    <description>Approved policy source records used to ground Agentforce answers.</description>
    <label>Policy</label>
    <nameField>
        <label>Policy Name</label>
        <length>80</length>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>