force-app/main/default/objects/Policy__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls whether this policy can be used for retrieval.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>