force-app/main/default/objects/Policy__c/fields/Policy_Text__c.field-meta.xml
<CustomField>
    <fullName>Policy_Text__c</fullName>
    <description>Grounding text used for customer-facing answers.</description>
    <label>Policy Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>