force-app/main/default/objects/Policy__c/fields/Source_URL__c.field-meta.xml
<CustomField>
    <fullName>Source_URL__c</fullName>
    <description>Canonical policy source URL for citation links.</description>
    <label>Source URL</label>
    <type>Url</type>
</CustomField>